--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Houdini
+*.hip
+*.hipnc
+*.hiplc
+*.hipnc.autosave
+*.bak*
+*.tmp
